--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "raffl",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "private": true,
   "bin": {
     "app": "infrastructure/app.js"
   },
   "scripts": {
-    "clean": "rm deployment.zip && rm -r build",
-    "bundle": "cp package.json build && cd build && npm i --production --no-package-lock && rm package.json && zip -qr ../deployment.zip *",
-    "build": "tsc",
-    "watch": "tsc -w",
-    "test": "jest",
     "cdk": "cdk",
-    "deploy": "cdk deploy '*'"
+    "clean": "rm -r build",
+    "build": "tsc",
+    "build-layers": "mkdir -p build/layers/nodejs && cp package.json build/layers/nodejs && cd build/layers/nodejs && npm i --production --no-package-lock && rm package.json",
+    "bundle": "cd build/src && zip -qr ../deployment.zip *",
+    "bundle-layers": "cd build/layers && zip -qr ../layer_node_modules.zip *",
+    "deploy": "cdk deploy '*'",
+    "test": "jest",
+    "watch": "tsc -w"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.117.0",
