--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": [
       "es2018"
     ],
-    "outDir": "./build",
+    "outDir": "./build/src",
     "strict": true,
     "noImplicitAny": false,
     "strictNullChecks": true,
