--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.117.0",
-    "@aws-cdk/aws-apigateway": "^1.117.0",
-    "@aws-cdk/aws-lambda": "^1.117.0",
+    "@aws-cdk/aws-apigateway": "1.117.0",
+    "@aws-cdk/aws-dynamodb": "1.117.0",
+    "@aws-cdk/aws-iam": "1.117.0",
+    "@aws-cdk/aws-lambda": "1.117.0",
     "@types/aws-lambda": "^8.10.82",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
